...
) = BaseTextField(
    value = value,
    onValueChange = onValueChange,
    placeholderText = placeholderText,
    isError = isError,
    trailingIcon = if (isValueVisible) Icons.Filled.Visibility else Icons.Filled.VisibilityOff,
    trailingIconDescription = if (isValueVisible) "Hide password" else "Show password",
    onTrailingIconClick = onValueVisibilityChange,
    keyboardType = KeyboardType.Password,
    imeAction = imeAction,
    visualTransformation = if (isValueVisible) VisualTransformation.None else PasswordVisualTransformation(),
    modifier = modifier
)
...
